--- a/style.css
+++ b/style.css
@@ -118,6 +118,14 @@ body {
     letter-spacing: 2px;
 }
 
+.attribution {
+     font-size: 11px; text-align: center;
+}
+ 
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
 @media screen and (max-width: 420px){
     body {
         width: 90%;
