--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     -webkit-box-shadow: 0px 8px 29px 2px rgba(0,0,0,0.22);
     box-shadow: 0px 8px 29px 2px rgba(0,0,0,0.22);
     overflow: hidden;
+    min-width: 300px;
 }
 
 .card .top {
